Fix nested generic function binding resolution (#223)